chore: add .editorconfig to handle with endOfLine

--- a/.prettierrc.json
+++ b/.prettierrc.json
@@ -4,5 +4,6 @@
     "printWidth": 120,
     "tabWidth": 4,
     "arrowParens": "avoid",
-    "singleQuote": false
+    "singleQuote": false,
+    "endOfLine": "lf"
 }
