--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     ]
   },
   "dependencies": {
+    "@hookform/resolvers": "^3.1.0",
     "@types/node": "20.1.0",
     "@types/react": "18.2.6",
     "@types/react-dom": "18.2.4",
@@ -27,9 +28,11 @@
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-spinners": "^0.13.8",
+    "react-hook-form": "^7.43.9",
     "styled-components": "6.0.0-rc.1",
     "tailwindcss": "3.3.2",
-    "typescript": "5.0.4"
+    "typescript": "5.0.4",
+    "zod": "^3.21.4"
   },
   "devDependencies": {
     "@commitlint/cli": "17.6.3",
